<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadActivity" >
	
    <!-- 标题文件 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/title_Status" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
       	android:layout_weight="1"
        android:hint="@string/hint_Text"
        android:id="@+id/contentView"
        android:gravity="top|center_vertical"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />
    
    <!-- <EditText 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:hint ="@string/hint_Text"
        android:id="@+id/editText"
        android:gravity="top|center_vertical"
        /> -->
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_showNews"
        android:textSize="20sp"
        android:id="@+id/buttonShow"
        />

</LinearLayout>